[package]
name = "fault-injection"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = ""
license = "GPL-3.0"
repository = "https://github.com/komora-io/fault-injection"
documentation = "https://docs.rs/fault-injection/"
keywords = ["fault", "injection", "testing", "reliability", "crash"]
categories = ["development-tools", "concurrency", "filesystem", "network-programming", "rust-patterns"]

[dependencies]
