[package]
name = "fault-injection"
version = "1.0.2"
edition = "2021"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "Simple fault injection, concurrency delay injection, and error source annotation"
license = "GPL-3.0"
repository = "https://github.com/komora-io/fault-injection"
documentation = "https://docs.rs/fault-injection/"
keywords = ["fault", "injection", "testing", "reliability", "crash"]
categories = ["development-tools", "concurrency", "filesystem", "network-programming", "rust-patterns"]
readme = "README.md"

[dependencies]
